--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import MenuClose from "../../public/assets/menu-close.svg";
 ---
 
 <header>
-  <a href="/">[logo]</a>
+  <a href="/"><strong>neuro<span style="color: var(--clr-light);">impact</span></strong></a>
   <nav>
     <button
       class="topnav-open"
