--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import { ClientRouter } from "astro:transitions";
+
+
 interface Props {
   title: string;
 }
@@ -21,12 +24,13 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
+    <ClientRouter />
     <title>{title}</title>
   </head>
   <body>
     <div class="container">
       <Header />
-      <main>
+      <main transition:animate="fade">
         <slot />
       </main>
       <Footer />
@@ -139,9 +143,20 @@ const { title } = Astro.props;
   /* buttons */
 
   .btn {
+    display: inline-block;
     padding: 15px;
     border-radius: var(--btn-radius);
     width: fit-content;
+    transition: transform .2s ease-in-out, opacity .2s ease-in-out;
+  }
+
+  .btn:hover {
+    transform: scale(1.05);
+    opacity: .8;
+  }
+
+  .btn:active {
+    transform: scale(.95);
   }
 
   .btn-primary {
