--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,13 +2,18 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { ClientRouter } from "astro:transitions";
+import { SEO } from "astro-seo";
 
 
 interface Props {
   title: string;
+  description?: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
+const siteUrl = "https://neuroimpacttx.com";
+const defaultDescription =
+  "NeuroImpact Therapeutics: Breakthrough science for a better tomorrow.";
 ---
 
 <!doctype html>
@@ -26,12 +31,31 @@ const { title } = Astro.props;
     />
     <meta name="generator" content={Astro.generator} />
     <ClientRouter />
+    <SEO 
+    title={title}
+      description={description || defaultDescription}
+      canonical={Astro.url.href}
+      openGraph={{
+        basic: {
+          title: title,
+          type: "website",
+          image: `${siteUrl}/assets/homepage-brain.webp`,
+          url: Astro.url.href,
+        },
+        optional: {
+            description: description || defaultDescription,
+            siteName: "NeuroImpact Therapeutics",
+            locale: "en_US",
+        },
+      }}
+      
+      />
     <title>{title}</title>
   </head>
   <body>
     <div class="container">
       <Header />
-      <main transition:animate="fade">
+      <main >
         <slot />
       </main>
       <Footer />
