--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -44,7 +44,7 @@
     <textarea id="msg" name="message" placeholder="Your message here" required
     ></textarea>
   </div>
-  <button type="submit" class="btn-secondary">Submit</button>
+  <button type="submit" class="btn btn-secondary">Submit</button>
   <p id="responseMsg"></p>
 </form>
 
