--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -19,9 +19,12 @@ type Props = {
 };
 const { post } = Astro.props;
 const { Content } = await render(post);
+
+const title = `${post.data.title} | NeuroImpact Therapeutics News`;
+const description = post.body.slice(0, 157) + "...";
 ---
 
-<Layout title={post.slug}>
+<Layout title={title} description={description}>
   <div class="article-container">
     <header>
       <h1>{post.data.title}</h1>
