--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,18 +21,18 @@ const description = "NeuroImpact Therapeutics develops targeted therapeutics for
         <a href="/research" class="btn btn-primary research-btn">Our Research</a
         >
       </div>
-      <Image src={heroImg} alt="" class="img hero-img" />
+      <Image src={heroImg} alt="Digital visualization of neural pathways in the brain" class="img hero-img" width={500} height={443}/>
     </section>
 
     <section class="about">
-      <Image src={aboutImg} alt="" class="img aboutImg" />
+      <Image src={aboutImg} alt="Neural network visualization showing connected neurons" class="img aboutImg" width={500} height={443} />
       <div class="about-content">
         <h2>Where <span>Innovation</span> Meets Patient Care.</h2>
         <p>
           At NeuroImpact Therapeutics, we are dedicated to transforming the
           lives of patients suffering from neurological disorders
         </p>
-        <a href="/vision" class="btn btn-primary">Learn More</a>
+        <a href="/vision" class="btn btn-primary">Learn About Our Vision</a>
       </div>
     </section>
   </div>
