--- a/src/pages/research.astro
+++ b/src/pages/research.astro
@@ -45,7 +45,7 @@ const description = "Explore our groundbreaking research on ion channels, KCNQ a
         </p>
       </div>
       <div class="img-container">
-        <Image src={kcnqImg} alt="" class="img" />
+        <Image src={kcnqImg} alt="Visualization showing KCNQ gene" class="img" width={500} height={443}/>
       </div>
     </div>
   </section>
