--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,10 @@ import MenuClose from "../../public/assets/menu-close.svg";
 ---
 
 <header>
-  <a href="/"><strong>neuro<span style="color: var(--clr-light);">impact</span></strong></a>
+  <a href="/">
+      <img src="/public/assets/logos/nb-light-none.png" alt="home logo" style="height: auto; width: clamp(100px, 15vw, 200px)">
+  </a>
+  <!-- <strong>neuro<span style="color: var(--clr-light);">impact</span></strong> -->
   <nav>
     <button
       class="topnav-open"
