--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,6 +63,7 @@ const defaultDescription =
       }}
       
       />
+ 
     <title>{title}</title>
   </head>
   <body>
@@ -116,9 +117,9 @@ const defaultDescription =
   body {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     font-weight: 400;
-    background: url("../assets/bg-molecules-large.webp") no-repeat !important;
-    background-size: 500px auto !important;
-    background-position: top left;
+    /* background: url("../assets/bg-molecules-large.webp") no-repeat !important; */
+    /* background-size: 500px auto !important; */
+    /* background-position: top left; */
   }
 
   input,
